Fixed responsiveness (height still not responsive)

--- a/style/style.scss
+++ b/style/style.scss
@@ -17,7 +17,7 @@ $scale_2: 1.888888888;
 $scale_3: 2.333333333;
 $scale_4: 3.222222222;
 $scale_5: 3.666666666;
-$scale_6: 4.111111111;
+$scale_6: 4.111111111;;
 $scale_7: 4.333333333;
 $logo-margin: 20px;
 
@@ -44,12 +44,14 @@ a{
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 4em;
+    background-color: #000d22;
     color: #fff;
-    width: 100vw;
+    width: 100%;
     overflow: overlay;
     display: flex;
 
       .parallax_wrapper{
+        margin: auto;
         scroll-behavior: smooth;
         scroll-snap-type: y proximity;
         width: 1920px;
@@ -65,6 +67,18 @@ body {
             background-color: #000d22;
             z-index: 2;
             text-align: center;
+
+            h2 {
+                padding-top: 90px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+
+            h3 {
+                padding-top: 90px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
         }
 
         #outro1{
@@ -104,7 +118,8 @@ body {
         }
 
         .parallax_group {
-            width: 1920px;
+            width: 100vw;
+            max-width: 1920px;
             position: relative;
             height: 100vh;
             z-index: -1;
@@ -119,6 +134,7 @@ body {
             .layer_1{
                 background-image: url("../img/background_1.2/layer_1.png");
                 background-repeat: no-repeat;
+                background-position: top center;
                 transform: translateZ($ztrans_1) scale($scale_1);
                 background-color: transparent;
 
@@ -194,19 +210,21 @@ body {
 
             }
             .layer_2{
+                background-position: top center;
                 background-image: url("../img/background_1.2/layer_2.png");
                 background-repeat: no-repeat;
                 transform: translateZ($ztrans_2) scale($scale_2);
             }
 
             .layer_4{
+                background-position: top center;
                 background-image: url("../img/background_1.2/layer_4.png");
                 background-repeat: no-repeat;
                 transform: translateZ($ztrans_4) scale($scale_4);
 
                 h1{
                     position: relative;
-                    font-size: 300px;
+                    font-size: 20vw;
                     color: white;
                     font-family: 'Comfortaa', sans-serif;
                  
@@ -214,17 +232,20 @@ body {
                               
             }
             .layer_5{
+                background-position: top center;
                 background-image: url("../img/background_1.2/layer_5.png");
                 background-repeat: no-repeat;
                 transform: translateZ($ztrans_5) scale($scale_5);
             }
             .layer_3{
+                background-position: top center;
                 background-image: url("../img/background_1.2/layer_6.3.png");
                 transform: translateZ($ztrans_3) scale($scale_3);
                 animation: snow_fall 75s .1s linear infinite;
             }
 
             .layer_6{
+                background-position: top center;
                 background-image: url("../img/background_1.2/layer_6.4.png");
                 transform: translateZ($ztrans_6) scale($scale_6);
                 animation: snow_fall 150s .3s linear infinite;
